# psv

./: .coverage  .gitignore  .pre-commit-config.yaml  .solhint.json  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  support-matrix.json
.github/: dependabot.yml  renovate.json
.github/workflows/: ci.yml  test-matrix.yml
docs/: REVIEW-HANDOFF.md  SETUP-onchain.md  architecture.md  c-security-gametheory.md  d3-reconciliation.md  g3-quote-option.md  r-reorg-finality.md  rails.md  sc1-abi-drift.md  support-matrix.md  t-token-quirks.md
docs/adr/: 001-chain-truth-oracle.md
onchain/src/: UpgradeableMockUSDC.sol
onchain/test/: UpgradeableMockUSDCSecurity.t.sol
requirements/: ci.in  ci.txt
schemas/: run-record-v1.1.schema.json
src/psv/: __init__.py  anvil.py  benchmark.py  chain.py  cli.py  differential.py  divergence.py  i18n.py  load.py  metrics.py  payloads.py  quote_option.py  rails.py  reconciliation.py  reorg.py  replay.py  report.py  report_html.py  run_record.py  safety.py  security_checks.py  sut.py  svm_chain.py  token_quirks.py
src/psv/adapters/: live_chain.py  solana.py
src/psv/reference_sut/: __init__.py  confirmer.py  server.py
src/psv/schemas/: __init__.py  findings-catalog.yaml  reconciliation-report-v2.schema.json
tests/: conftest.py  reconcile_fakes.py  test_abi_encoding_property.py  test_abi_strict_unit.py  test_adapter_and_rpc_unit.py  test_anvil_decoder_rejections.py  test_anvil_more_unit.py  test_c0_cross_chain_replay.py  test_chain_sut_more_unit.py  test_chain_unit.py  test_cli_unit.py  test_confirmer_unit.py  test_d3_reconciliation.py  test_delay_unit.py  test_differential_unit.py  test_divergence_full.py  test_divergence_property.py  test_divergence_unit.py  test_e2e_happy.py  test_edge_cases_unit.py  test_eoa_asset_unit.py  test_eurc_domain.py  test_facilitator_crash.py  test_function_docs.py  test_fuzz_quote.py  test_g3_quote_option.py  test_gas_spike_stuck_mempool.py  test_http_adapter_live.py  test_i_idempotency.py  test_idempotency_unit.py  test_load_throughput.py  test_load_unit.py  test_metered_unit.py  test_multi_asset_race_unit.py  test_n16_eoa_asset_silent_noop.py  test_numeric_domains_unit.py  test_payloads_unit.py  test_public_repo_sanitation.py  test_quote_option_unit.py  test_r_reorg_invalidation.py  (+21 more)
tools/: check_function_docs.py  check_public_repo.py  validate_support_matrix.py
