[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psv"
version = "0.1.0"
description = "System-level verification harness for complete x402 payment systems (settlement, RPC, reconciliation, load)."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "moped2110" }]
keywords = ["x402", "payments", "system-test", "verification", "anvil", "eip-3009"]

# Core stays dependency-free. Chain/signing and the reference SUT are explicit
# extras; exact CI artifacts are pinned separately in requirements/ci.txt.
dependencies = []

[project.urls]
Homepage = "https://github.com/moped2110/psv"
Repository = "https://github.com/moped2110/psv"
Issues = "https://github.com/moped2110/psv/issues"

# Read-only reconciliation CLI (stdlib only — no extra deps).
[project.scripts]
psv = "psv.cli:main"

[project.optional-dependencies]
# Explicit marker for consumers that provision extras from a capability map.
core = []
# Talk to a chain and sign EIP-3009 authorizations.
chain = ["web3>=7.0", "eth-account>=0.13"]
# Run the bundled reference system-under-test.
sut = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    # The reference server recovers the configured facilitator account.
    "eth-account>=0.13",
]
release = [
    "build>=1.2",
    "hatchling>=1.27",
    "twine>=5.1",
    "pip-audit>=2.7",
    "uv>=0.5",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.6",
    "hypothesis>=6.156.7",
    "jsonschema>=4.23",
    "httpx>=0.27",
    "web3>=7.0",
    "eth-account>=0.13",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "build>=1.2",
    "hatchling>=1.27",
    "twine>=5.1",
    "pip-audit>=2.7",
    "uv>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/psv"]

[tool.hatch.build.targets.wheel.force-include]
"schemas/run-record-v1.1.schema.json" = "psv/schemas/run-record-v1.1.schema.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "onchain: requires a running Anvil + deployed token (run on a dev machine, not in CI sandbox)",
    "load: load/stress profiles — never in the standard CI run",
]
# Offline by default: the on-chain E2E and SC1 live tests are opt-in via `-m onchain`.
addopts = "-m 'not onchain and not load'"
filterwarnings = [
    # starlette's TestClient warns that its httpx integration is deprecated (wants
    # httpx2). Third-party deprecation we don't control; silence just this one.
    # Message is regex (re.match): the real text has backticks around `httpx` /
    # `starlette.testclient`, so match loosely and drop the category (defaults to
    # Warning, which covers StarletteDeprecationWarning).
    'ignore:Using .*starlette.testclient.* is deprecated',
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/psv"]
# Optional third-party libs without stubs — don't fail the strict run on them.
[[tool.mypy.overrides]]
module = ["web3.*", "eth_account.*", "eth_utils.*", "fastapi.*", "uvicorn.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# The formatter owns line width (E501 out of the lint gate — it can't reflow long
# comments and would only add noise). The gate catches real defects.
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",   # line length is the formatter's job
    "B008",   # (no Typer here, but kept for parity with 01-x402-testsuite)
    "UP042",  # DivergenceKind/Severity deliberately (str, Enum) for stable .value
]

[tool.coverage.run]
source = ["psv"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true

[tool.towncrier]
directory = "changes"
package = "psv"
filename = "CHANGELOG.md"
